--- a/src/configs/default.yml
+++ b/src/configs/default.yml
@@ -4,8 +4,6 @@ seed: 0
 data_dir: "TODO: SET PATH"
 output_dir: "TODO: SET PATH"
 
-run_name: ""
-
 train:
   num_epochs: 1
   batch_size: 4
@@ -13,6 +11,15 @@ train:
   weight_decay: 0.0001
 
 data:
-  input_size: [426, 560]
-  num_workers: 4
+  input_size: [426, 560] # Size of the input images (height, width). There should be no need to change this
+  num_workers: 4         # How many workers to use for parallel data loading
   pin_memory: true
+
+logging:
+  log: true                 # Whether to log the training or not (Useful for debugging to not create a new run every time)
+  log_images: true          # Whether to log a comparison figure between predictions and ground truth (at both epoch- and step-level)
+  val_every_step_log: false # Whether to run on validation set at every step-level log
+  log_every_k_epochs: 1     # How frequent to perform epoch-level logging
+  log_every_k_steps: 100    # How frequent to perform step-level logging
+  run_name: ""
+  project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
