--- a/src/configs/default.yml
+++ b/src/configs/default.yml
@@ -1,12 +1,12 @@
 device: "cuda" # or "cpu"
 seed: 0
 
-data_dir: "TODO: SET PATH"
-output_dir: "TODO: SET PATH"
+data_dir: "/cluster/courses/cil/monocular_depth/data"
+output_dir: "./output"
 
 train:
   num_epochs: 1
-  batch_size: 4
+  batch_size: 8
   learning_rate: 0.0001
   weight_decay: 0.0001
 
@@ -18,9 +18,9 @@ data:
 logging:
   log: true                 # Whether to log the training or not (Useful for debugging to not create a new run every time)
   log_images: true          # Whether to log a comparison figure between predictions and ground truth (at both epoch- and step-level)
-  val_every_step_log: false # Whether to run on validation set at every step-level log
+  val_every_step_log: true  # Whether to run on validation set at every step-level log
   log_every_k_epochs: 1     # How frequent to perform epoch-level logging
-  log_every_k_steps: 100    # How frequent to perform step-level logging
+  log_every_k_steps: 500    # How frequent to perform step-level logging
   run_name: ""
   entity: "MonocularDepthEstimation"       # Which entity/team to log to. There should be no need to change this
   project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
