--- a/src/configs/default.yml
+++ b/src/configs/default.yml
@@ -5,10 +5,14 @@ data_dir: "/cluster/courses/cil/monocular_depth/data"
 output_dir: "./output"
 
 train:
-  num_epochs: 1
+  num_epochs: 5
   batch_size: 8
   learning_rate: 0.0001
   weight_decay: 0.0001
+
+model:
+  hidden_channels: 32
+  dilation: 1
 
 data:
   input_size: [426, 560] # Size of the input images (height, width). There should be no need to change this
@@ -19,8 +23,8 @@ logging:
   log: true                 # Whether to log the training or not (Useful for debugging to not create a new run every time)
   log_images: true          # Whether to log a comparison figure between predictions and ground truth (at both epoch- and step-level)
   val_every_step_log: true  # Whether to run on validation set at every step-level log
-  log_every_k_epochs: 1     # How frequent to perform epoch-level logging
-  log_every_k_steps: 500    # How frequent to perform step-level logging
+  log_every_k_epochs: 1     # How frequent to perform epoch-level logging (set to -1 to disable)
+  log_every_k_steps: -1     # How frequent to perform step-level logging (set to -1 to disable)
   run_name: ""
   entity: "MonocularDepthEstimation"       # Which entity/team to log to. There should be no need to change this
   project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
