--- a/src/configs/depth_anything.yml
+++ b/src/configs/depth_anything.yml
@@ -14,11 +14,11 @@ train:
   head_penalty_weight: 0.5
 
 model:
-  type: "u_net"  # The type of model to use. ["u_net", "depth_anything"]
+  type: "depth_anything"  # The type of model to use. ["u_net", "depth_anything"]
   hidden_channels: 32
   dilation: 1
   
-  num_heads: 8
+  num_heads: 16
   include_pretrained_head: false
 
 data:
@@ -31,7 +31,7 @@ logging:
   val_every_step_log: true        # Whether to run on validation set at every step-level log
   log_every_k_epochs: 1           # How frequent to perform epoch-level logging (set to -1 to disable)
   log_every_k_steps: -1           # How frequent to perform step-level logging (set to -1 to disable)
-  run_name: ""
+  run_name: "More Heads"
   entity: "MonocularDepthEstimation"       # Which entity/team to log to. There should be no need to change this
   project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
   upload_to_wandb: true                    # Whether to upload the model and predicted depth maps to wandb
