--- a/src/configs/default.yml
+++ b/src/configs/default.yml
@@ -9,7 +9,7 @@ train:
   batch_size: 8
   learning_rate: 0.01
   weight_decay: 0.01
-  gradient_regularizer_weight: 1
+  gradient_regularizer_weight: 0
 
 model:
   hidden_channels: 32
@@ -17,7 +17,7 @@ model:
 
 data:
   input_size: [426, 560] # Size of the input images (height, width). There should be no need to change this
-  num_workers: 4         # How many workers to use for parallel data loading
+  num_workers: 2         # How many workers to use for parallel data loading
   pin_memory: true
 
 logging:
@@ -26,7 +26,7 @@ logging:
   val_every_step_log: true        # Whether to run on validation set at every step-level log
   log_every_k_epochs: 1           # How frequent to perform epoch-level logging (set to -1 to disable)
   log_every_k_steps: -1           # How frequent to perform step-level logging (set to -1 to disable)
-  run_name: "backbone test"
+  run_name: ""
   entity: "MonocularDepthEstimation"       # Which entity/team to log to. There should be no need to change this
   project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
   upload_to_wandb: true                    # Whether to upload the model and predicted depth maps to wandb
