--- a/src/configs/depth_anything_post_process.yml
+++ b/src/configs/depth_anything_post_process.yml
@@ -23,8 +23,8 @@ model:
 
 post_process:
   guided_filter:
-    r: 3
-    eps: 0.001
+    r: 16
+    eps: 0.25
 
 data:
   num_workers: 2         # How many workers to use for parallel data loading
@@ -36,7 +36,7 @@ logging:
   val_every_step_log: true        # Whether to run on validation set at every step-level log
   log_every_k_epochs: 1           # How frequent to perform epoch-level logging (set to -1 to disable)
   log_every_k_steps: -1           # How frequent to perform step-level logging (set to -1 to disable)
-  run_name: "More Heads"
+  run_name: "guided_filter"
   entity: "MonocularDepthEstimation"       # Which entity/team to log to. There should be no need to change this
   project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
   upload_to_wandb: true                    # Whether to upload the model and predicted depth maps to wandb
