--- a/src/configs/test_runs/depthanything/single-head.yml
+++ b/src/configs/test_runs/depthanything/single-head.yml
@@ -17,6 +17,8 @@ model:
   type: "depth_anything"  # The type of model to use. ["u_net", "depth_anything", "dinov2_backboned_unet"]
   hidden_channels: 32
   dilation: 1
+
+  conv_transpose: true # Whether to use conv transpose layers in the decoder
   
   num_heads: 8
   include_pretrained_head: false
