--- a/src/configs/test_runs/unet/no_conv_transpose.yml
+++ b/src/configs/test_runs/unet/no_conv_transpose.yml
@@ -14,13 +14,13 @@ train:
   head_penalty_weight: [1, 0]  # Weight is scheduled from first value to second value over the course of training
 
 model:
-  type: "dinov2_backboned_unet"  # The type of model to use. ["u_net", "depth_anything", "dinov2_backboned_unet"]
+  type: "u_net"  # The type of model to use. ["u_net", "depth_anything", "dinov2_backboned_unet"]
   hidden_channels: 32
   dilation: 1
 
-  conv_transpose: true # Whether to use conv transpose layers in the decoder
+  conv_transpose: false # Whether to use conv transpose layers in the decoder
   
-  num_heads: 8
+  num_heads: 1
   include_pretrained_head: false
 
 data:
@@ -29,12 +29,12 @@ data:
   pin_memory: true
 
 logging:
-  log: true                       # Whether to log the training or not (Useful for debugging to not create a new run every time)
+  log: false                       # Whether to log the training or not (Useful for debugging to not create a new run every time)
   log_images: true                # Whether to log a comparison figure between predictions and ground truth (at both epoch- and step-level)
   val_every_step_log: true        # Whether to run on validation set at every step-level log
   log_every_k_epochs: 1           # How frequent to perform epoch-level logging (set to -1 to disable)
   log_every_k_steps: -1           # How frequent to perform step-level logging (set to -1 to disable)
-  run_name: "DinoV2 backboned UNet (multiple heads)"
+  run_name: "UNet (no convolutional tranpose + single head)"
   entity: "MonocularDepthEstimation"       # Which entity/team to log to. There should be no need to change this
   project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
   upload_to_wandb: true                    # Whether to upload the model and predicted depth maps to wandb
