--- a/src/configs/evaluations/dinov2_backboned_unet/multiple-heads.yml
+++ b/src/configs/evaluations/dinov2_backboned_unet/multiple-heads.yml
@@ -5,31 +5,30 @@ data_dir: "/cluster/courses/cil/monocular_depth/data"
 output_dir: "./output" # "/work/scratch/smarian/output"  # Replace with your username if you want to save the output to scratch to avoid quota issues
 
 train:
-  num_epochs: 15
+  num_epochs: 20
   batch_size: 8
   learning_rate: 0.001
   weight_decay: 0.001
   gradient_regularizer_weight: 0
-  gradient_loss_weight: 1
+  gradient_loss_weight: 0
   head_penalty_weight: [1, 0]  # Weight is scheduled from first value to second value over the course of training
 
 model:
-  type: "depth_anything"  # The type of model to use. ["u_net", "depth_anything"]
+  type: "dinov2_backboned_unet"  # The type of model to use. ["u_net", "depth_anything", "dinov2_backboned_unet"]
   hidden_channels: 32
   dilation: 1
 
-  num_heads: 16
+  conv_transpose: true # Whether to use conv transpose layers in the decoder
+
+  num_heads: 8
   include_pretrained_head: false
 
-  wandb_artifact_fullname: "MonocularDepthEstimation/MonocularDepthEstimation/best_model:v5"
+  wandb_artifact_fullname: "MonocularDepthEstimation/MonocularDepthEstimation/best_model:v12
 
 post_process: {}
-  # gaussian_blur:
-  #   kernel_size: 7
-  #   sigma: 2
-  # normalized_std_interpolation: {}
 
 data:
+  input_size: [426, 560] # Size of the input images (height, width). There should be no need to change this
   num_workers: 2         # How many workers to use for parallel data loading
   pin_memory: true
 
@@ -39,7 +38,7 @@ logging:
   val_every_step_log: true        # Whether to run on validation set at every step-level log
   log_every_k_epochs: 1           # How frequent to perform epoch-level logging (set to -1 to disable)
   log_every_k_steps: -1           # How frequent to perform step-level logging (set to -1 to disable)
-  run_name: "Depth Anything More Heads (no post processing)"
+  run_name: "DinoV2 backboned UNet (multiple heads)"
   entity: "MonocularDepthEstimation"       # Which entity/team to log to. There should be no need to change this
   project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
   upload_to_wandb: true                    # Whether to upload the model and predicted depth maps to wandb
