--- a/src/configs/evaluations/dinov2_backboned_unet/multiple-heads.yml
+++ b/src/configs/evaluations/dinov2_backboned_unet/multiple-heads.yml
@@ -23,7 +23,7 @@ model:
   num_heads: 8
   include_pretrained_head: false
 
-  wandb_artifact_fullname: "MonocularDepthEstimation/MonocularDepthEstimation/best_model:v12
+  wandb_artifact_fullname: "MonocularDepthEstimation/MonocularDepthEstimation/best_model:v12"
 
 post_process: {}
 
@@ -38,7 +38,7 @@ logging:
   val_every_step_log: true        # Whether to run on validation set at every step-level log
   log_every_k_epochs: 1           # How frequent to perform epoch-level logging (set to -1 to disable)
   log_every_k_steps: -1           # How frequent to perform step-level logging (set to -1 to disable)
-  run_name: "DinoV2 backboned UNet (multiple heads)"
+  run_name: "DinoV2 backboned UNet (multiple heads) no post process"
   entity: "MonocularDepthEstimation"       # Which entity/team to log to. There should be no need to change this
   project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
   upload_to_wandb: true                    # Whether to upload the model and predicted depth maps to wandb
