--- a/src/configs/default.yml
+++ b/src/configs/default.yml
@@ -23,6 +23,7 @@ model:
   
   num_heads: 8
   include_pretrained_head: false
+  depth_before_aggregate: true    # Whether to map the head outputs to metric depth before aggregating or after
 
 data:
   input_size: [426, 560] # Size of the input images (height, width). There should be no need to change this
@@ -30,7 +31,7 @@ data:
   pin_memory: true
 
 logging:
-  log: false                       # Whether to log the training or not (Useful for debugging to not create a new run every time)
+  log: true                       # Whether to log the training or not (Useful for debugging to not create a new run every time)
   log_images: true                # Whether to log a comparison figure between predictions and ground truth (at both epoch- and step-level)
   val_every_step_log: true        # Whether to run on validation set at every step-level log
   log_every_k_epochs: 1           # How frequent to perform epoch-level logging (set to -1 to disable)
