--- a/src/configs/evaluations/architecture/dino_large_multi_head.yml
+++ b/src/configs/evaluations/architecture/dino_large_multi_head.yml
@@ -18,10 +18,10 @@ model:
   hidden_channels: 32
   dilation: 1
 
-  conv_transpose: false # Whether to use conv transpose layers in the decoder
+  conv_transpose: true # Whether to use conv transpose layers in the decoder
   weight_initialization: "glorot" # The weight initialization method to use. ["glorot", "default"]
 
-  num_heads: 1
+  num_heads: 4
   include_pretrained_head: false
   depth_before_aggregate: true    # Whether to map the head outputs to metric depth before aggregating or after
 
@@ -41,7 +41,7 @@ logging:
   val_every_step_log: true        # Whether to run on validation set at every step-level log
   log_every_k_epochs: 1           # How frequent to perform epoch-level logging (set to -1 to disable)
   log_every_k_steps: -1           # How frequent to perform step-level logging (set to -1 to disable)
-  run_name: "DINOV2 large (removed horizontal flip)"
+  run_name: "DINOV2 large multi head (removed horizontal flip)"
   entity: "MonocularDepthEstimation"       # Which entity/team to log to. There should be no need to change this
   project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
   upload_to_wandb: true                    # Whether to upload the model and predicted depth maps to wandb
