--- a/src/configs/james_test_compare/dino_transpose_conv.yml
+++ b/src/configs/james_test_compare/dino_transpose_conv.yml
@@ -14,7 +14,7 @@ train:
   head_penalty_weight: [2, 1]  # Weight is scheduled from first value to second value over the course of training
 
 model:
-  type: "depth_anything"  # The type of model to use. ["u_net", "depth_anything", "dinov2_backboned_unet"]
+  type: "dinov2_backboned_unet"  # The type of model to use. ["u_net", "depth_anything", "dinov2_backboned_unet"]
   hidden_channels: 32
   dilation: 1
 
@@ -25,7 +25,7 @@ model:
   include_pretrained_head: false
   depth_before_aggregate: true    # Whether to map the head outputs to metric depth before aggregating or after
 
-  wandb_artifact_fullname: "MonocularDepthEstimation/MonocularDepthEstimation/best_model:v31"
+  wandb_artifact_fullname: "MonocularDepthEstimation/MonocularDepthEstimation/best_model:v37"
 
 data:
   input_size: [426, 560] # Size of the input images (height, width). There should be no need to change this
@@ -43,10 +43,11 @@ logging:
   val_every_step_log: true        # Whether to run on validation set at every step-level log
   log_every_k_epochs: 1           # How frequent to perform epoch-level logging (set to -1 to disable)
   log_every_k_steps: -1           # How frequent to perform step-level logging (set to -1 to disable)
-  run_name: "DepthAnything Custom Head"
+  run_name: "DINOv2 Transpose Conv (removed horizontal flip)"
   entity: "MonocularDepthEstimation"       # Which entity/team to log to. There should be no need to change this
   project_name: "MonocularDepthEstimation" # Which project to log to. There should be no need to change this
   upload_to_wandb: true                    # Whether to upload the model and predicted depth maps to wandb
 
 architecture_compare:
-  sort_order: 4
+  name_override: "DINOv2 Transpose Conv"
+  sort_order: -2
