--- a/src/configs/postprocess_grid/diunet/postprocess_config_1.yml
+++ b/src/configs/postprocess_grid/diunet/postprocess_config_1.yml
@@ -13,23 +13,24 @@ logging:
   log_every_k_steps: -1
   log_images: true
   project_name: MonocularDepthEstimation
-  run_name: gaussian_blur_model_depth_anything_id_13
+  run_name: FineTune/diunet/id_1_guided_filter_normalized_std_interpolation
   upload_to_wandb: true
   val_every_step_log: true
 model:
   conv_transpose: true
   dilation: 1
   hidden_channels: 32
-  include_pretrained_head: true
-  num_heads: 16
-  type: depth_anything
-  wandb_artifact_fullname: MonocularDepthEstimation/MonocularDepthEstimation/best_model:v5
-  weight_initialization: default
+  include_pretrained_head: false
+  num_heads: 4
+  type: diunet
+  wandb_artifact_fullname: MonocularDepthEstimation/MonocularDepthEstimation/best_model:v38
+  weight_initialization: glorot
 output_dir: ./output
 post_process:
-  gaussian_blur:
-    kernel_size: 5
-    sigma: 1.0
+  guided_filter:
+    eps: 0.001
+    r: 16
+  normalized_std_interpolation: {}
 seed: 0
 train:
   batch_size: 8
